Bug 783824 - Don't stash the presentation (discard it if it was stashed) when subdoc frames are destroyed if the presentation is being destroyed. r=roc